fix overflow issue

--- a/src/components/shelfSystem/shelfScene/shelfSceneStyles.module.css
+++ b/src/components/shelfSystem/shelfScene/shelfSceneStyles.module.css
@@ -1,7 +1,6 @@
 .shelfSceneContainer {
   width: 100vw;
-  height: max-content;
-  height: max-content;
+  overflow-x: hidden;
 }
 
 .loadingStacksText {
@@ -17,5 +16,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  overflow-x: hidden;
+  position: relative;
+  overflow: hidden;
 }
